--- a/src/main/java/net/simpleframework/mvc/component/ext/attachments/message_zh_CN.properties
+++ b/src/main/java/net/simpleframework/mvc/component/ext/attachments/message_zh_CN.properties
@@ -1,14 +1,15 @@
 
-AttachmentInsert.0=\u63d2\u5165\u9644\u4ef6
-AttachmentInsert.1=\u5168\u9009
-AttachmentInsert.2=\u8bf7\u9009\u62e9\u8981\u63d2\u5165\u7684\u9644\u4ef6\uff01
-
 AttachmentLoaded.0=\u65e0\u6cd5\u83b7\u53d6\u6307\u5b9a\u7684\u6587\u4ef6\uff0c\u53ef\u80fd\u5df2\u88ab\u5220\u9664\uff01
 AttachmentLoaded.1=\u9644\u4ef6\u5c5e\u6027
 AttachmentLoaded.3=\u7f16\u8f91
 
 DefaultAttachmentHandle.0=\u9644\u4ef6\u5728\u7f13\u5b58\u4e2d\uff0c\u672a\u88ab\u4fdd\u5b58\uff01
 DefaultAttachmentHandle.1=\u9644\u4ef6\u5df2\u6807\u8bb0\u4e3a\u5220\u9664\uff0c\u672a\u6267\u884c\u786e\u8ba4\u64cd\u4f5c\uff01
+
+AbstractAttachmentHandler.0=\u63d2\u5165\u9644\u4ef6
+AbstractAttachmentHandler.1=\u5168\u9009
+AbstractAttachmentHandler.2=\u81f3\u5c11\u8981\u9009\u62e9\u4e00\u4e2a\u9644\u4ef6\uff01
+AbstractAttachmentHandler.3=\u786e\u8ba4\u63d0\u4ea4
 
 attachment_edit.0=\u6807\u9898
 attachment_edit.1=\u7b80\u4ecb
