Signed-off-by: CHENKAN <CHENKAN@CHENKAN-PC>

--- a/src/main/java/net/simpleframework/mvc/component/ext/attachments/message_zh_CN.properties
+++ b/src/main/java/net/simpleframework/mvc/component/ext/attachments/message_zh_CN.properties
@@ -11,6 +11,7 @@ AbstractAttachmentHandler.1=\u5168\u9009
 AbstractAttachmentHandler.2=\u81f3\u5c11\u8981\u9009\u62e9\u4e00\u4e2a\u9644\u4ef6\uff01
 AbstractAttachmentHandler.3=\u786e\u8ba4\u63d0\u4ea4
 AbstractAttachmentHandler.4=\u8d85\u51fa\u9644\u4ef6\u5217\u8868\u7684\u6700\u5927\u503c\uff1a{0}
+AbstractAttachmentHandler.5=\u8d85\u51fa\u9644\u4ef6\u4e0a\u4f20\u961f\u5217\u7684\u6700\u5927\u503c\uff1a{0}
 
 attachment_edit.0=\u6807\u9898
 attachment_edit.1=\u7b80\u4ecb
