--- a/src/main/java/net/simpleframework/mvc/component/ext/login/message_zh_CN.properties
+++ b/src/main/java/net/simpleframework/mvc/component/ext/login/message_zh_CN.properties
@@ -6,6 +6,7 @@ login.4=\u6ce8\u518c\u5e10\u53f7
 login.5=\u90ae\u4ef6\u5730\u5740
 login.6=\u624b\u673a\u53f7\u7801
 login.7=\u83b7\u53d6\u5bc6\u7801
+login.8=\u767b\u5f55\u5e10\u53f7
 
 get_pwd.0=\u8bf7\u8f93\u5165\u60a8\u7684\u90ae\u7bb1
 get_pwd.1=\u9a8c\u8bc1\u7801
