Signed-off-by: CHENK <CHENK@CHENK-PC>

--- a/src/main/java/net/simpleframework/mvc/component/ext/comments/message_zh_CN.properties
+++ b/src/main/java/net/simpleframework/mvc/component/ext/comments/message_zh_CN.properties
@@ -1,10 +1,13 @@
 
-Comment.html.0=\u5df2\u6709
-Comment.html.1=\u6761\u8bc4\u8bba
-Comment.html.2=\u53d1\u8868\u8bc4\u8bba
-Comment.html.3=\u8868\u60c5
+AbstractCommentHandler.0=\u5df2\u6709
+AbstractCommentHandler.1=\u6761\u8bc4\u8bba
+AbstractCommentHandler.2=\u53d1\u8868\u8bc4\u8bba
+AbstractCommentHandler.3=\u8868\u60c5
 
 CommentList.0=\u56de\u590d
 CommentList.1=\u8fd8\u6ca1\u6709\u53d1\u8868\u4efb\u4f55\u8bc4\u8bba!
 
 CommentLoaded.0=\u8bc4\u8bba\u7684\u5185\u5bb9\u6709\u70b9\u5c11:(
+
+comment.jsp.0=\u60a8\u8fd8\u53ef\u4ee5\u8f93\u5165
+comment.jsp.1=\u4e2a\u5b57\u7b26\uff0c\u8d85\u51fa\u90e8\u5206\u5c06\u4e0d\u88ab\u4fdd\u5b58
