--- a/src/main/java/net/simpleframework/mvc/component/ext/comments/message_zh_CN.properties
+++ b/src/main/java/net/simpleframework/mvc/component/ext/comments/message_zh_CN.properties
@@ -5,7 +5,7 @@ AbstractCommentHandler.2=\u53d1\u8868\u8bc4\u8bba
 AbstractCommentHandler.3=\u8868\u60c5
 
 CommentList.0=\u56de\u590d
-CommentList.1=\u8fd8\u6ca1\u6709\u53d1\u8868\u4efb\u4f55\u8bc4\u8bba!
+CommentList.1=\u8fd8\u6ca1\u6709\u53d1\u8868\u4efb\u4f55\u8bc4\u8bba！
 
 CommentLoaded.0=\u8bc4\u8bba\u7684\u5185\u5bb9\u6709\u70b9\u5c11:(
 
