--- a/src/main/java/net/simpleframework/mvc/component/ext/attachments/message_zh_CN.properties
+++ b/src/main/java/net/simpleframework/mvc/component/ext/attachments/message_zh_CN.properties
@@ -17,3 +17,4 @@ AbstractAttachmentHandler.7=\u4e0a\u4f20\u56fe\u7247
 
 attachment_edit.0=\u6807\u9898
 attachment_edit.1=\u7b80\u4ecb
+attachment_edit.2=\u7c7b\u578b
