--- a/src/main/java/net/simpleframework/mvc/component/ext/comments/message_zh_CN.properties
+++ b/src/main/java/net/simpleframework/mvc/component/ext/comments/message_zh_CN.properties
@@ -1,12 +1,13 @@
 
-AbstractCommentHandler.0=\u5df2\u6709
-AbstractCommentHandler.1=\u6761\u8bb0\u5f55
-AbstractCommentHandler.2=\u53d1\u8868
-AbstractCommentHandler.3=\u8868\u60c5
+AbstractCommentHandler.0=\u5DF2\u6709
+AbstractCommentHandler.1=\u6761\u8BB0\u5F55
+AbstractCommentHandler.2=\u53D1\u8868
+AbstractCommentHandler.3=\u8868\u60C5
 
-CommentList.0=\u56de\u590d
+CommentList.0=\u56DE\u590D
 
-CommentLoaded.0=\u5185\u5bb9\u6709\u70b9\u5c11:(
+CommentLoaded.0=\u5185\u5BB9\u6709\u70B9\u5C11:(
+CommentLoaded.1=\u8FD8\u6CA1\u6709\u4EBA\u53D1\u8868\u8BC4\u8BBA:(
 
-comment.jsp.0=\u60a8\u8fd8\u53ef\u4ee5\u8f93\u5165
-comment.jsp.1=\u4e2a\u5b57\u7b26\uff0c\u8d85\u51fa\u90e8\u5206\u5c06\u4e0d\u88ab\u4fdd\u5b58
+comment.jsp.0=\u60A8\u8FD8\u53EF\u4EE5\u8F93\u5165
+comment.jsp.1=\u4E2A\u5B57\u7B26\uFF0C\u8D85\u51FA\u90E8\u5206\u5C06\u4E0D\u88AB\u4FDD\u5B58
