--- a/src/main/java/net/simpleframework/mvc/component/ext/attachments/message_zh_CN.properties
+++ b/src/main/java/net/simpleframework/mvc/component/ext/attachments/message_zh_CN.properties
@@ -1,20 +1,21 @@
 
-AttachmentLoaded.0=\u65e0\u6cd5\u83b7\u53d6\u6307\u5b9a\u7684\u6587\u4ef6\uff0c\u53ef\u80fd\u5df2\u88ab\u5220\u9664\uff01
-AttachmentLoaded.1=\u9644\u4ef6\u5c5e\u6027
-AttachmentLoaded.3=\u7f16\u8f91
+AttachmentLoaded.0=\u65E0\u6CD5\u83B7\u53D6\u6307\u5B9A\u7684\u6587\u4EF6\uFF0C\u53EF\u80FD\u5DF2\u88AB\u5220\u9664\uFF01
+AttachmentLoaded.1=\u9644\u4EF6\u5C5E\u6027
+AttachmentLoaded.3=\u7F16\u8F91
 
-DefaultAttachmentHandle.0=\u9644\u4ef6\u5728\u7f13\u5b58\u4e2d\uff0c\u672a\u88ab\u4fdd\u5b58\uff01
-DefaultAttachmentHandle.1=\u9644\u4ef6\u5df2\u6807\u8bb0\u4e3a\u5220\u9664\uff0c\u672a\u6267\u884c\u786e\u8ba4\u64cd\u4f5c\uff01
+DefaultAttachmentHandle.0=\u9644\u4EF6\u5728\u7F13\u5B58\u4E2D\uFF0C\u672A\u88AB\u4FDD\u5B58\uFF01
+DefaultAttachmentHandle.1=\u9644\u4EF6\u5DF2\u6807\u8BB0\u4E3A\u5220\u9664\uFF0C\u672A\u6267\u884C\u786E\u8BA4\u64CD\u4F5C\uFF01
 
-AbstractAttachmentHandler.0=\u63d2\u5165\u9644\u4ef6
+AbstractAttachmentHandler.0=\u63D2\u5165\u9644\u4EF6
 AbstractAttachmentHandler.1=\u5168\u9009
-AbstractAttachmentHandler.2=\u81f3\u5c11\u8981\u9009\u62e9\u4e00\u4e2a\u9644\u4ef6\uff01
-AbstractAttachmentHandler.3=\u786e\u8ba4\u63d0\u4ea4
-AbstractAttachmentHandler.4=\u8d85\u51fa\u9644\u4ef6\u5217\u8868\u7684\u6700\u5927\u503c\uff1a{0}
-AbstractAttachmentHandler.5=\u8d85\u51fa\u9644\u4ef6\u4e0a\u4f20\u961f\u5217\u7684\u6700\u5927\u503c\uff1a{0}
-AbstractAttachmentHandler.6=\u56fe\u7247
-AbstractAttachmentHandler.7=\u4e0a\u4f20\u56fe\u7247
+AbstractAttachmentHandler.2=\u81F3\u5C11\u8981\u9009\u62E9\u4E00\u4E2A\u9644\u4EF6\uFF01
+AbstractAttachmentHandler.3=\u786E\u8BA4\u63D0\u4EA4
+AbstractAttachmentHandler.4=\u8D85\u51FA\u9644\u4EF6\u5217\u8868\u7684\u6700\u5927\u503C\uFF1A{0}
+AbstractAttachmentHandler.5=\u8D85\u51FA\u9644\u4EF6\u4E0A\u4F20\u961F\u5217\u7684\u6700\u5927\u503C\uFF1A{0}
+AbstractAttachmentHandler.6=\u56FE\u7247
+AbstractAttachmentHandler.7=\u4E0A\u4F20\u56FE\u7247
+AbstractAttachmentHandler.8=\u6253\u5305\u4E0B\u8F7D
 
 attachment_edit.0=\u6807\u9898
-attachment_edit.1=\u7b80\u4ecb
-attachment_edit.2=\u7c7b\u578b
+attachment_edit.1=\u7B80\u4ECB
+attachment_edit.2=\u7C7B\u578B
