--- a/src/main/java/net/simpleframework/mvc/component/ext/comments/message_zh_CN.properties
+++ b/src/main/java/net/simpleframework/mvc/component/ext/comments/message_zh_CN.properties
@@ -7,7 +7,7 @@ AbstractCommentHandler.3=\u8868\u60C5
 CommentList.0=\u56DE\u590D
 
 CommentLoaded.0=\u5185\u5BB9\u6709\u70B9\u5C11:(
-CommentLoaded.1=\u8FD8\u6CA1\u6709\u4EBA\u53D1\u8868\u8BC4\u8BBA:(
+CommentLoaded.1=\u6682\u65E0\u8BC4\u8BBA
 
 comment.jsp.0=\u60A8\u8FD8\u53EF\u4EE5\u8F93\u5165
 comment.jsp.1=\u4E2A\u5B57\u7B26\uFF0C\u8D85\u51FA\u90E8\u5206\u5C06\u4E0D\u88AB\u4FDD\u5B58
