--- a/src/main/java/net/simpleframework/mvc/component/ext/attachments/message_zh_CN.properties
+++ b/src/main/java/net/simpleframework/mvc/component/ext/attachments/message_zh_CN.properties
@@ -2,6 +2,7 @@
 AttachmentLoaded.0=\u65E0\u6CD5\u83B7\u53D6\u6307\u5B9A\u7684\u6587\u4EF6\uFF0C\u53EF\u80FD\u5DF2\u88AB\u5220\u9664\uFF01
 AttachmentLoaded.1=\u9644\u4EF6\u5C5E\u6027
 AttachmentLoaded.3=\u7F16\u8F91
+AttachmentLoaded.4=\u5386\u53F2\u8BB0\u5F55
 
 DefaultAttachmentHandle.0=\u9644\u4EF6\u5728\u7F13\u5B58\u4E2D\uFF0C\u672A\u88AB\u4FDD\u5B58\uFF01
 DefaultAttachmentHandle.1=\u9644\u4EF6\u5DF2\u6807\u8BB0\u4E3A\u5220\u9664\uFF0C\u672A\u6267\u884C\u786E\u8BA4\u64CD\u4F5C\uFF01
