--- a/src/main/java/net/simpleframework/mvc/component/ext/comments/message_zh_CN.properties
+++ b/src/main/java/net/simpleframework/mvc/component/ext/comments/message_zh_CN.properties
@@ -10,4 +10,5 @@ CommentLoaded.0=\u5185\u5BB9\u6709\u70B9\u5C11:(
 CommentLoaded.1=\u6682\u65E0\u8BC4\u8BBA
 
 comment.jsp.0=\u60A8\u8FD8\u53EF\u4EE5\u8F93\u5165
-comment.jsp.1=\u4E2A\u5B57\u7B26\uFF0C\u8D85\u51FA\u90E8\u5206\u5C06\u4E0D\u88AB\u4FDD\u5B58
+comment.jsp.1=\u4E2A\u5B57\u7B26
+comment.jsp.2=\uFF0C\u8D85\u51FA\u90E8\u5206\u5C06\u4E0D\u88AB\u4FDD\u5B58
