--- a/src/main/java/net/simpleframework/mvc/component/ext/attachments/message_zh_CN.properties
+++ b/src/main/java/net/simpleframework/mvc/component/ext/attachments/message_zh_CN.properties
@@ -22,7 +22,8 @@ attachment_edit.1=\u7B80\u4ECB
 attachment_edit.2=\u7C7B\u578B
 
 AttachmentHistoryLoaded.0=\u5168\u90E8
-AttachmentHistoryLoaded.1=\u4EC5\u6587\u6863
-AttachmentHistoryLoaded.2=\u4EC5\u56FE\u7247
-AttachmentHistoryLoaded.3=\u4EC5\u97F3\u9891
-AttachmentHistoryLoaded.4=\u4EC5\u89C6\u9891
+AttachmentHistoryLoaded.1=\u6587\u6863
+AttachmentHistoryLoaded.2=\u56FE\u7247
+AttachmentHistoryLoaded.3=\u97F3\u9891
+AttachmentHistoryLoaded.4=\u89C6\u9891
+AttachmentHistoryLoaded.5=\u9009\u62E9
