--- a/src/main/java/net/simpleframework/mvc/component/ext/attachments/message_zh_CN.properties
+++ b/src/main/java/net/simpleframework/mvc/component/ext/attachments/message_zh_CN.properties
@@ -27,3 +27,4 @@ AttachmentHistoryLoaded.2=\u56FE\u7247
 AttachmentHistoryLoaded.3=\u97F3\u9891
 AttachmentHistoryLoaded.4=\u89C6\u9891
 AttachmentHistoryLoaded.5=\u9009\u62E9
+AttachmentHistoryLoaded.6=\u5168\u9009
