--- a/src/main/java/net/simpleframework/mvc/component/ext/comments/message_zh_CN.properties
+++ b/src/main/java/net/simpleframework/mvc/component/ext/comments/message_zh_CN.properties
@@ -3,6 +3,7 @@ AbstractCommentHandler.0=\u5DF2\u6709
 AbstractCommentHandler.1=\u6761\u8BB0\u5F55
 AbstractCommentHandler.2=\u53D1 \u8868
 AbstractCommentHandler.3=\u8868\u60C5
+AbstractCommentHandler.4=\u67E5\u770B\u5168\u90E8{0}\u6761\u56DE\u590D
 
 CommentList.0=\u56DE\u590D
 
